--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -122,7 +122,7 @@
 
     </div>
 
-    <button class="borger__btn btn-reset" id="burger">
+    <button class="burger__btn btn-reset" id="burger">
       <picture>
         <img loading="lazy" src="img/burger.svg" class="burger--img" width="15" height="14" alt="burger">
       </picture>
