--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -83,7 +83,8 @@
 
 
   .modal__btn {
-    width: 18.9vw;
+    margin-top: .5vw;
+    width: 20.9vw;
     height: 4.42vw;
     text-align: center;
   }
@@ -230,8 +231,9 @@
 
   .quest {
     width: 20.2rem;
-    height: 27rem;
+    height: 30rem;
     padding: 3.2rem;
+    padding-bottom: 0;
 
     .close {
       top: 1rem;
@@ -266,6 +268,7 @@
     }
 
     .modal__btn {
+      margin-top: 1rem;
       width: 15.75rem;
       height: 4.42rem;
     }
